--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,26 @@
-<p>login works!</p>
-
-<div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+<div *ngIf="callRegisterComponent === false" class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
     <mat-card class="box">
+        <img mat-card-md-image src="../../assets/images/mackIcon/M_vermelho.png" class="logoMRed" alt="Logo isolado do Mackenzie">
         <mat-card-header>
-            <mat-card-title>Log in</mat-card-title>
+            <mat-card-title class="appNameTitle">Aplicação CIF</mat-card-title>
+        </mat-card-header>
+        <mat-card-header class="entrarHeader">
+            <mat-card-title class="entrarTitle">Entrar</mat-card-title>
         </mat-card-header>
 
-        <form class="example-form">
+        <form class="login-form">
             <mat-card-content>
-                <mat-form-field class="example-full-width">
+                <mat-form-field class="login-full-width">
                     <input matInput placeholder="Email ou Crefito">
                 </mat-form-field>
 
-                <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Senha">
-                </mat-form-field> 
+                <mat-form-field class="login-full-width">
+                    <input matInput placeholder="Senha" type="password">
+                </mat-form-field>
             </mat-card-content>
 
-            <button mat-stroked-button color="accent" class="btn-block">Log in</button>
+            <button mat-stroked-button color="warn" class="btn-block">Entrar</button>
+            <button mat-stroked-button color="warn" (click)="toRegister()" class="btn-block register">Registrar-se</button>
         </form>
     </mat-card>
 </div>
