--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,19 +8,20 @@
             <mat-card-title class="entrarTitle">Entrar</mat-card-title>
         </mat-card-header>
 
-        <form class="login-form">
+        <form class="login-form" #loginForm="ngForm" (ngSubmit)="onSubmit()">
             <mat-card-content>
                 <mat-form-field class="login-full-width">
-                    <input matInput placeholder="Email ou Crefito">
+                    <input matInput placeholder="Email ou Crefito" id="email" #email="ngModel" name="email" [(ngModel)]="person.email" required>
                 </mat-form-field>
 
                 <mat-form-field class="login-full-width">
-                    <input matInput placeholder="Senha" type="password">
+                    <input minlength="6" maxlength="8" matInput placeholder="Senha" type="password" id="password" #password="ngModel" name="password" [(ngModel)]="person.password" required>
                 </mat-form-field>
             </mat-card-content>
 
-            <button mat-stroked-button color="warn" class="btn-block">Entrar</button>
-            <button mat-stroked-button color="warn" (click)="toRegister()" class="btn-block register">Registrar-se</button>
+            <button *ngIf="!loading" [disabled]="!loginForm.form.valid" mat-stroked-button type="submit" color="warn" class="btn-block">Entrar</button>
+            <mat-progress-spinner *ngIf="loading" class="example-margin" mode="indeterminate" color="warn"></mat-progress-spinner>
+            <button *ngIf="!loading" mat-stroked-button color="warn" (click)="toRegister()" class="btn-block register">Registrar-se</button>
         </form>
     </mat-card>
 </div>
