--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -80,7 +80,7 @@ body {
 
 .login-wrapper .example-full-width,
 .login-wrapper .btn-block {
-    width: 100%;
+    width: 35%;
 }
 
 .login-wrapper mat-card-header {
@@ -101,10 +101,23 @@ body {
 
 .login-wrapper .mat-stroked-button {
     border: 1px solid currentColor;
-    line-height: 54px;
+    line-height: 24px;
     background: #FFF7FA;
 }
 
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
     padding: 0.8375em 0;
+}
+
+.logoMRed {
+    width: 40%;
+    padding-left: 6.5em;
+}
+
+.cadastroHeader {
+    padding-top: 4em !important;
+}
+
+::ng-deep .mat-step-header .mat-step-icon {
+    background-color: #E4022D;
 }
