--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,10 +1,59 @@
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
     <mat-card class="box">
-        <mat-card-header>
-            <mat-card-title>Register</mat-card-title>
+        <img mat-card-md-image src="../../assets/images/mackIcon/M_vermelho.png" class="logoMRed" alt="Logo isolado do Mackenzie">
+        <mat-card-header class="cadastroHeader">
+            <mat-card-title>Cadastro</mat-card-title>
         </mat-card-header>
+        <mat-vertical-stepper color="warn">
+            <mat-step [stepControl]="personFormGroup">
+                <form #personFormGroup="ngForm">
+                    <ng-template matStepLabel>Informações pessoais</ng-template>
+                    <mat-form-field>
+                        <mat-label>Email</mat-label>
+                        <input matInput placeholder="Email" required>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Senha</mat-label>
+                        <input matInput placeholder="Senha" required>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Nome</mat-label>
+                        <input matInput placeholder="Nome" required>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Sobrenome</mat-label>
+                        <input matInput placeholder="Sobrenome" required>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Data de Nascimento</mat-label>
+                        <input matInput [matDatepicker]="picker" required>
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Gênero</mat-label>
+                        <mat-select>
+                            <mat-option *ngFor="let gender of genders" [value]="gender.value">
+                                {{gender.viewValue}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Celular</mat-label>
+                        <input matInput placeholder="Celular" minlength="9" maxlength="9" required>
+                    </mat-form-field>
+                    <div>
+                        <button mat-button [disabled]="!personFormGroup.form.valid" matStepperNext>Next</button>
+                    </div>
+                </form>
+            </mat-step>
+            <mat-step label="Step 1">
+                Content 2
+            </mat-step>
+        </mat-vertical-stepper>
 
-        <form class="example-form">
+
+        <!-- <form class="example-form">
 
             <mat-card-content>
                 <mat-form-field class="example-full-width">
@@ -30,6 +79,6 @@
             </mat-card-content>
 
             <button mat-stroked-button color="warn" class="btn-block">Register</button>
-        </form>
+        </form> -->
     </mat-card>
 </div>
