Alterando objeto de login e ajustando css do cadastro

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -110,8 +110,7 @@ body {
 
 .logoMRed {
     width: 40%;
-    padding-left: 6.5em;
-    /* padding-bottom: 5em; */
+    padding-left: 33%;
 }
 
 .entrarTitle {
