--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -102,7 +102,6 @@ body {
 .login-wrapper .mat-stroked-button {
     border: 1px solid currentColor;
     line-height: 35px;
-    float: right;
     background: #FFF7FA;
     width: 140px;
 }
@@ -133,7 +132,7 @@ body {
 }
 
 mat-form-field {
-    padding-right: 1%;
+    display: block !important;
 }
 
 .btn-done {
