--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,10 @@ body {
     height: 100%;
 }
 
+body {
+    margin: 0;
+}
+
 #f7f7f7 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
