adicionando estilo a tela principal e ajustando alguns pontos na tela de cadastro

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -61,6 +61,12 @@
                         <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
                     <div class="nextStep">
+                        <button mat-button mat-button matStepperNext mat-stroked-button type="submit" color="warn" class="btn-block btn-cancel">
+                            <mat-icon>double_arrow</mat-icon>
+                            Cancelar
+                            <mat-icon>double_arrow</mat-icon>
+                        </button>
+                        <span class="spacer"></span>
                         <button mat-button mat-button matStepperNext mat-stroked-button type="submit" color="warn" class="btn-block">
                             <mat-icon>double_arrow</mat-icon>
                             Próximo
