--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,17 +1,74 @@
 .sidenav-container {
-  height: 100%;
+    height: 100%;
 }
 
 .sidenav {
-  width: 200px;
-}
-
-.sidenav .mat-toolbar {
-  background: inherit;
+    width: 200px;
+    border: transparent;
+    box-shadow: 1px 0 5px -1px #888;
 }
 
 .mat-toolbar.mat-primary {
-  position: sticky;
-  top: 0;
-  z-index: 1;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.greeting-span {
+    font-size: 15px;
+    padding-right: 30px;
+}
+
+.person-icon {
+    vertical-align: middle;
+}
+
+.person-icon:hover {
+    cursor: pointer;
+}
+
+.menu-greeting {
+    position: relative;
+    right: 3%;
+}
+
+.list-menu-side {
+    display: grid !important;
+}
+
+mat-button.btn-side-menu {
+    height: 60px;
+}
+
+mat-button span {
+    position: relative;
+    top: 15px;
+}
+
+mat-button.btn-side-menu:hover {
+    cursor: pointer;
+    background-color: rgb(255, 247, 247);
+    ;
+}
+
+mat-icon.icon-side-menu {
+    vertical-align: middle;
+    padding-right: 10px;
+    padding-left: 9px;
+    position: relative;
+    top: 15px;
+}
+
+@media(max-width: 768px) {
+    .greeting-span {
+        display: none;
+    }
+}
+
+.mack-white-icon {
+    padding-right: 10px;
 }
