--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,29 @@
 <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-        <mat-toolbar>Menu</mat-toolbar>
-        <mat-nav-list>
-            <a mat-list-item href="#">Link 1</a>
-            <a mat-list-item href="#">Link 2</a>
-            <a mat-list-item href="#">Link 3</a>
+        <mat-toolbar color="warn">Menu</mat-toolbar>
+        <mat-nav-list class="list-menu-side">
+            <mat-button class="btn-side-menu" mat-list-item>
+                <mat-icon class="icon-side-menu">add_to_queue</mat-icon><span>Nova Avaliação</span></mat-button>
+            <mat-button class="btn-side-menu" mat-list-item>
+                <mat-icon class="icon-side-menu">person_add</mat-icon><span>Avaliações Anteriores</span></mat-button>
+            <mat-button class="btn-side-menu" mat-list-item>
+                <mat-icon class="icon-side-menu">person_add</mat-icon><span>Link 3</span></mat-button>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-        <mat-toolbar color="primary">
+        <mat-toolbar color="warn">
             <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
               <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
-            <span>Aplicação CIF</span>
+            <mat-icon class="mack-white-icon" svgIcon="mack_white"></mat-icon>
+            <span> Aplicação CIF</span>
+            <span class="spacer"></span>
+            <span *ngIf="greetings != null" class="greeting-span">{{ greetings }}</span>
+            <button mat-button class="menu-greeting" [matMenuTriggerFor]="menu"><mat-icon class="person-icon">person</mat-icon></button>
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="viewProfile()"><mat-icon>person_outline</mat-icon> Perfil</button>
+                <button mat-menu-item (click)="logout()"><mat-icon>exit_to_app</mat-icon> Sair</button>
+            </mat-menu>
         </mat-toolbar>
-        <!-- Add Content Here -->
     </mat-sidenav-content>
 </mat-sidenav-container>
