--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -143,7 +143,23 @@ mat-form-field {
     float: left !important;
 }
 
+.btn-cancel {
+    margin-right: 49%;
+}
+
 .cepNF {
     font-size: 10px;
     color: red;
+}
+
+@media(max-width: 768px) {
+     ::ng-deep .mat-step-label {
+        display: none !important;
+    }
+}
+
+@media(max-width: 645px) {
+    .btn-cancel {
+        margin-bottom: 5%;
+    }
 }
