ajustando pontos de responsividade na tela de login e na tela de cadastro

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -129,3 +129,9 @@ mat-progress-spinner {
     position: relative;
     left: 35%;
 }
+
+@media(max-width: 480px) {
+    .box {
+        height: 90%;
+    }
+}
