Ajustando tela de login e reload no logout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,11 @@
             <mat-button class="btn-side-menu" mat-list-item>
                 <mat-icon class="icon-side-menu">add_to_queue</mat-icon><span>Nova Avaliação</span></mat-button>
             <mat-button class="btn-side-menu" mat-list-item>
-                <mat-icon class="icon-side-menu">person_add</mat-icon><span>Avaliações Anteriores</span></mat-button>
+                <mat-icon class="icon-side-menu">list_alt</mat-icon><span>Avaliações Anteriores</span></mat-button>
             <mat-button class="btn-side-menu" mat-list-item>
-                <mat-icon class="icon-side-menu">person_add</mat-icon><span>Link 3</span></mat-button>
+                <mat-icon class="icon-side-menu">person_add</mat-icon><span>Cadastrar Paciente</span></mat-button>
+            <mat-button class="btn-side-menu" mat-list-item>
+                <mat-icon class="icon-side-menu">people_alt</mat-icon><span>Pacientes Cadastrados</span></mat-button>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
